Assertion failure: mRawPtr != nullptr (You can't dereference a NULL RefPtr with operator->().), at /builds/worker/workspace/obj-build/dist/include/mozilla/RefPtr.h:315
Categories
(Core :: Audio/Video: Playback, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | wontfix |
firefox78 | --- | wontfix |
firefox79 | --- | fixed |
firefox80 | --- | verified |
People
(Reporter: tsmith, Assigned: padenot)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: assertion, regression, testcase, Whiteboard: [bugmon:bisected,confirmed])
Crash Data
Attachments
(2 files)
216 bytes,
text/html
|
Details | |
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Assertion failure: mRawPtr != nullptr (You can't dereference a NULL RefPtr with operator->().), at /builds/worker/workspace/obj-build/dist/include/mozilla/RefPtr.h:315
29|0|libxul.so|RefPtr<AudioDeviceInfo>::operator->() const|hg:hg.mozilla.org/mozilla-central:mfbt/RefPtr.h:992822684324869697f7ed47b042aeef5aff7ab5|314|0x2f
29|1|libxul.so|mozilla::detail::RunnableFunction<RefPtr<mozilla::MozPromise<nsresult, bool, true> > mozilla::MediaManager::PostTask<mozilla::MozPromise<nsresult, bool, true>, mozilla::SourceListener::SetEnabledFor(mozilla::MediaTrack*, bool)::$_41::operator()()::{lambda(mozilla::MozPromiseHolder<mozilla::MozPromise<nsresult, bool, true> >&)#1}>(char const*, mozilla::SourceListener::SetEnabledFor(mozilla::MediaTrack*, bool)::$_41::operator()()::{lambda(mozilla::MozPromiseHolder<mozilla::MozPromise<nsresult, bool, true> >&)#1}&&)::{lambda()#1}>::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.h:992822684324869697f7ed47b042aeef5aff7ab5|575|0x7a
29|2|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:992822684324869697f7ed47b042aeef5aff7ab5|1234|0xe
29|3|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:992822684324869697f7ed47b042aeef5aff7ab5|501|0xc
29|4|libxul.so|mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:992822684324869697f7ed47b042aeef5aff7ab5|332|0x13
29|5|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:992822684324869697f7ed47b042aeef5aff7ab5|315|0x17
29|6|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:992822684324869697f7ed47b042aeef5aff7ab5|290|0x8
29|7|libxul.so|base::Thread::ThreadMain()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/thread.cc:992822684324869697f7ed47b042aeef5aff7ab5|192|0x8
29|8|libxul.so|ThreadFunc(void*)|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/platform_thread_posix.cc:992822684324869697f7ed47b042aeef5aff7ab5|40|0x6
29|9|libpthread.so.0||||0x76db
29|10|libc.so.6||||0x12188f
Reporter | ||
Comment 1•5 years ago
|
||
A Pernosco session is available here: https://pernos.co/debug/8rvBQGuLt5kmcgtCWGAN-Q/index.html
Updated•5 years ago
|
Comment 2•5 years ago
|
||
Comment 3•5 years ago
|
||
Hi, paul,
It seems that this assertion is caused by bug 1624322, do you have a time to take it a look?
Thank you.
Assignee | ||
Comment 4•5 years ago
|
||
Updated•5 years ago
|
Comment 6•5 years ago
|
||
bugherder |
Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Comment 8•5 years ago
|
||
The patch landed in nightly and beta is affected.
:padenot, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Updated•5 years ago
|
Comment 9•5 years ago
|
||
Updated•5 years ago
|
Assignee | ||
Comment 10•5 years ago
|
||
Comment on attachment 9161919 [details]
Bug 1650181 - Null-check when getting default output device info, because there can be no output device. r?achronop
Beta/Release Uplift Approval Request
- User impact if declined: nullptr crash in a rare case
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It's just a null check in a rare case (either no audio system on the machine or no audio device at all, included virtual devices).
- String changes made/needed:
Comment 11•4 years ago
|
||
Comment on attachment 9161919 [details]
Bug 1650181 - Null-check when getting default output device info, because there can be no output device. r?achronop
Approved for 79.0b9.
Comment 12•4 years ago
|
||
bugherder uplift |
Description
•