Bug 1650181 - Null-check when getting default output device info, because there can be no output device. r=achronop

Differential Revision: https://phabricator.services.mozilla.com/D82560